# test_ci_cd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/app/: __init__.py  main.py
tests/: __init__.py  test_main.py
